# pythonsecuritytools

./: .ochrona.yml  .travis.yml  Makefile  Pipfile  README.md  app.py  pyproject.toml  requirements.txt
output/: 1_test-requirements.txt_results.json  2_pipfile.lock_results.json
