[tool.poetry]
name = "pythonsecuritytools"
version = "0.1.0"
description = "Test linting and security tools for CI/CD"
authors = ["Lee Myring <mail@thinkstack.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bandit = "^1.7.0"
black = "^20.8b1"
mypy = "^0.812"
ochrona = "^0.0.17"
Flask = "^1.1.2"
urllib3 = "^1.26.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
